Use single edit-config for Running data store
If a Restconf operation requires preparing multiple edit-config
operations to achieve correct results, such as with YANG Patch
or Put/Post with insert queries. Sending multiple edit-config
messages can cause issues if one of them fails.
In such a scenario, already successfully sent edit-config operations
cannot be reverted.

Use a single edit-config instead, which contains all required changes.
In case of failure, none of them will be applied.

JIRA: NETCONF-1197
Change-Id: I34b57e545b9d1e4ae9d90f976365d1867b02ebcf
Signed-off-by: Peter Suna <peter.suna@pantheon.tech>
Signed-off-by: Ivan Hrasko <ivan.hrasko@pantheon.tech>